--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "author": "liangrongjia",
-  "description": "analyze",
+  "description": "The frontend of NLPSentimentAnalyses",
   "homepage": ".",
   "main": "main.js",
   "dependencies": {
@@ -23,7 +23,7 @@
   },
   "scripts": {
     "react-start": "react-scripts start",
-    "start": "react-scripts start",
+    "start": "electron-forge start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
@@ -55,23 +55,23 @@
     "@electron-forge/maker-rpm": "^6.0.0-beta.54",
     "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
     "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.1"
+    "electron": "^12.0.2"
   },
   "config": {
     "forge": {
       "packagerConfig": {},
       "makers": [
         {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "nlp_sentiment_analysis"
-          }
-        },
-        {
           "name": "@electron-forge/maker-zip",
           "platforms": [
             "darwin"
           ]
+        },
+        {
+          "name": "@electron-forge/maker-squirrel",
+          "config": {
+            "name": "nlp_sentiment_analysis"
+          }
         },
         {
           "name": "@electron-forge/maker-deb",
