--- a/package.json
+++ b/package.json
@@ -3,33 +3,28 @@
   "version": "0.1.0",
   "private": true,
   "author": "liangrongjia",
-  "description": "The frontend of NLPSentimentAnalyses",
+  "description": "The frontend of NLPSentimentAnalysis",
   "homepage": ".",
   "main": "main.js",
+  "icon": "./public/favicon.png",
   "dependencies": {
-    "@testing-library/jest-dom": "^5.11.9",
-    "@testing-library/react": "^11.2.5",
-    "@testing-library/user-event": "^12.8.3",
     "@types/jest": "^26.0.21",
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
-    "electron-squirrel-startup": "^1.0.0",
+    "echarts": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
-    "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1"
+    "typescript": "^4.2.3"
   },
   "scripts": {
     "react-start": "react-scripts start",
-    "start": "electron-forge start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
     "electron-start": "electron .",
-    "package": "electron-forge package",
-    "make": "electron-forge make"
+    "package": "electron-packager ./ nlp-sentiment-analysis --out ./out --electron-version 12.0.2 --overwrite"
   },
   "eslintConfig": {
     "extends": [
@@ -50,38 +45,7 @@
     ]
   },
   "devDependencies": {
-    "@electron-forge/cli": "^6.0.0-beta.54",
-    "@electron-forge/maker-deb": "^6.0.0-beta.54",
-    "@electron-forge/maker-rpm": "^6.0.0-beta.54",
-    "@electron-forge/maker-squirrel": "^6.0.0-beta.54",
-    "@electron-forge/maker-zip": "^6.0.0-beta.54",
-    "electron": "^12.0.2"
-  },
-  "config": {
-    "forge": {
-      "packagerConfig": {},
-      "makers": [
-        {
-          "name": "@electron-forge/maker-zip",
-          "platforms": [
-            "darwin"
-          ]
-        },
-        {
-          "name": "@electron-forge/maker-squirrel",
-          "config": {
-            "name": "nlp_sentiment_analysis"
-          }
-        },
-        {
-          "name": "@electron-forge/maker-deb",
-          "config": {}
-        },
-        {
-          "name": "@electron-forge/maker-rpm",
-          "config": {}
-        }
-      ]
-    }
+    "electron": "^12.0.2",
+    "electron-packager": "^15.2.0"
   }
 }
