--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,5 @@
 sentiMentAnalysis/.data/imdb/aclImdb/
+sentiMentAnalysis/.data/imdb/
+sentiMentAnalysis/data/
+sentiment_analysis/.data/
+sentiment_analysis/.data/imdb/
