--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,13 @@ sentiMentAnalysis/.data/imdb/
 sentiMentAnalysis/data/
 sentiment_analysis/.data/
 sentiment_analysis/.data/imdb/
+
+/node_modules
+
+# data
+sentiment_analysis
+sentiMentAnalysis
+
+# production
+/build
+/out
