--- a/.gitignore
+++ b/.gitignore
@@ -2,27 +2,13 @@
 
 # dependencies
 /node_modules
-/.pnp
-.pnp.js
-
-# testing
-/coverage
 
 # data
-/sentiment_analysis/.data
-/sentiMentAnalysis/.data
+/sentiment_analysis
+/sentiMentAnalysis
 
 # production
 /build
 /out
 
-# misc
-.DS_Store
-.env.local
-.env.development.local
-.env.test.local
-.env.production.local
-
-npm-debug.log*
-yarn-debug.log*
-yarn-error.log*
+/.idea
