--- a/.gitignore
+++ b/.gitignore
@@ -10,6 +10,7 @@
 
 # production
 /build
+/out
 
 # misc
 .DS_Store
@@ -21,3 +22,11 @@
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
+
+# data
+/sentiment_analysis
+/sentiMentAnalysis
+
+/.idea
+
+/.vscode
