--- a/package.json
+++ b/package.json
@@ -11,12 +11,12 @@
     "@types/node": "^12.20.6",
     "@types/react": "^17.0.3",
     "@types/react-dom": "^17.0.2",
+    "echarts": "^5.0.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-scripts": "4.0.3",
     "typescript": "^4.2.3",
-    "web-vitals": "^1.1.1",
-    "echarts": "^5.0.2"
+    "web-vitals": "^1.1.1"
   },
   "scripts": {
     "start": "react-scripts start",
